<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.producer.ProducerForm">


    <TextView
        android:id="@+id/lblProducer"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:layout_marginTop="71dp"
        android:text="@string/menu_producer"
        android:textColor="@color/teal_80ffdb"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextProducerEmail"
        android:layout_width="247dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:ems="10"
        android:hint="producer@mail.com"
        android:inputType="textEmailAddress"
        android:textColor="@color/teal_80ffdb"
        android:textColorHint="@color/teal_8ad4d4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblProducerEmail" />

    <TextView
        android:id="@+id/lblProducerEmail"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:text="@string/labelEmail"
        android:textColor="@color/purple_6930c3"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProducerName" />

    <TextView
        android:id="@+id/lblProducerName"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:text="@string/labelName"
        android:textColor="@color/purple_6930c3"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblProducer" />

    <EditText
        android:id="@+id/editTextProducerName"
        android:layout_width="194dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="Producer"
        android:inputType="textPersonName"
        android:textColor="@color/teal_80ffdb"
        android:textColorHint="@color/teal_8ad4d4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblProducerName" />

    <Button
        android:id="@+id/buttonProducerSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/save"
        android:textColor="@color/teal_80ffdb"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_6930c3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextProducerEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextProducerEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>